Fix (css): Fix speech characters to overflow to next line when it exceeds speech element width

--- a/app.css
+++ b/app.css
@@ -84,12 +84,15 @@ speech value {
     /* border-bottom: 1px solid #000; */
 }
 speech value character {
-    display: inline;
     margin-left: 5px;
+    display: inline-block;
+    vertical-align: top;
     border: 1px solid transparent;
+    height: calc(1.5vw + 2px);
     color: #fff;
     font-family: monospace;
     font-size: 1.5vw;
+    line-height: 1.5vw;
 }
 speech value character.line-feed {
     border: 1px solid transparent;
